// Copyright 2022 Silent Eight Pte. Ltd.

syntax = "proto3";

package com.silenteight.proto.fab.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option java_package = "com.silenteight.proto.fab.api.v1";
option java_outer_classname = "AlertDetailsApiProto";
option java_multiple_files = true;

service AlertDetailsService {
  rpc AlertsDetails (AlertsDetailsRequest) returns (AlertsDetailsResponse) {}
}

message AlertsDetailsRequest {
  repeated AlertHeader alerts = 1 [(google.api.field_behavior) = REQUIRED];
}

message AlertHeader {
  string batch_id = 1 [(google.api.field_behavior) = REQUIRED];
  string alert_id = 2 [(google.api.field_behavior) = REQUIRED];
}

message AlertsDetailsResponse {
  repeated AlertDetails alerts = 1 [(google.api.field_behavior) = REQUIRED];
}

message AlertDetails {
  string alert_id = 1 [(google.api.field_behavior) = REQUIRED];
  //Field contains Message data in json format.
  //Example JSON Path is $.Body.msg_SendMessage.Messages[0].Message
  string payload = 2 [(google.api.field_behavior) = REQUIRED];
}
